--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue-router": "^3.2.0",
     "vuetify": "^2.6.0",
     "vuex": "^3.4.0",
+    "vuex-multi-tab-state": "^1.0.17",
     "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
